# omni_bot

./: .gitignore  README.md  config.py  main.py  webserver.py  websocket_router.py
design_files/: omnibot-cover.stl  omnibot-lid-top.stl  omnibot-walls.stl
dif_bot/: __init__.py  bot_kinematics.py  config.py
motor_pid/: __init__.py  autotune_velocity_pid.py  encoder.py  findminpwm.py  motor_pid.py  motor_velocity_pid.py  motor_velocity_pid_pio.py  pio_quadrature_encoder.py
omni_bot/: __init__.py  bot_kinematics.py  config.py
pio_encoder/: CMakeLists.txt  micropython.mk
pio_encoder/user_c_modules/pio_encoder/: CMakeLists.txt  quadrature_encoder.c
pio_enconder/: quadrature_encoder.c
server/: connect_wifi.py  web_server.py  ws_server.py
web/: index.html  joystick.html  main.js  script.js  style.css  styles.css  wificonfig.html
wifi_manager/: __init__.py  wifi_manager.py
